# mcp4agent

./: .dockerignore  .env.example  .gitignore  DOCKER_DEPLOYMENT.md  Dockerfile  README.md  __init__.py  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml  docker.yml
src/: __main__.py
src/docker_status/: __init__.py  server.py
src/mcp4agent/: __init__.py  __main__.py
src/wechat_mcp/: __init__.py  __main__.py  api.py  config.py  docker_status.py  server.py  token_cache.py
